--- a/Shop/sass/block/_var.scss
+++ b/Shop/sass/block/_var.scss
@@ -7,3 +7,10 @@ $maincolor: #F16D7F;
     color: #000000;
 }
 
+@mixin loyalty__tablet{
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+}
+
