--- a/Shop/css/style.css
+++ b/Shop/css/style.css
@@ -40,7 +40,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    z-index: 2;
+    z-index: 10;
 }
 
 .header__menu {
@@ -58,9 +58,8 @@ a {
     overflow: scroll;
     min-width: 232px;
     padding: 37px 0 0 34px;
-    height: 764px;
+    height: calc(100vh - 82px);
     background: #FFFFFF;
-    /* calc(100vh - 82px) */
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
 }
 
@@ -131,7 +130,7 @@ a {
 }
 
 .intro {
-    height: 764px;
+    height: calc(100vh - 82px);
     background-color: #F1E4E6;
     margin-bottom: 6%;
     display: block;
@@ -140,17 +139,18 @@ a {
 .intro__wrap {
     display: flex;
     align-items: center;
-    background-clip:padding-box;
+    
+    background-size: contain;
     height: 100%;
     background-image: url(../img/man__intro.png);
     background-repeat: no-repeat;
-    background-position:  -226px bottom;
-    padding-left: 50%;
+    background-position:  -209px bottom;
+    padding-left: 40%;
     
 }
 
 .intro__text {
-    min-width: 35%;
+    width: 377px;
     font-weight: 400;
     font-size: 32px;
     line-height: 38px;
@@ -180,15 +180,21 @@ a {
 }
 
 .categories__card {
+    width: 32%;
+    padding-top: 9%;
+    padding-bottom: 9%;
+    margin-bottom: 3%; 
+}
+
+.categories__card a {
     display:flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 32%;
-    padding-top: 9%;
-    padding-bottom: 9%;
-    margin-bottom: 3%;
-   
+}
+
+.categories__card a h2:hover {
+    font-size: xx-large;
 }
 
 .woman {
@@ -238,10 +244,6 @@ a {
     font-size: x-large;
 }
 
-.categories__text h2 {
-    width: 154px;
-}
-
 .fetured__h2 {
     font-style: normal;
     font-weight: normal;
@@ -264,15 +266,12 @@ a {
     margin-bottom: 4%;
 }
 
-/* .catalog__items__wrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-} */
-
 .catalog__items__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 360px;
-    height: 581px;
     background: #F8F8F8;
     margin-bottom: 3%;
 }
@@ -317,15 +316,15 @@ a {
 
 .catalog__items__card__text {
     background: #F8F8F8;
+    padding: 24px 0 20px 16px;
 }
 
-.catalog__items__card__text h3 {
+.catalog__items__card__text a {
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
     color: #000000;
     line-height: 16px;
-    margin: 24px 0 13px 18px; 
 }
 
 .catalog__items__card__text p {
@@ -333,15 +332,14 @@ a {
     line-height: 17px;
     font-size: 14px;
     color: #5D5D5D;
-    margin: 0 28px 18px 18px;
+    margin-bottom: 18px;
+    margin-top: 13px;
 }
 
 .decor__product {
     font-size: 16px;
     line-height: 19px;
     color: #F16D7F;
-
-    margin: 0 0 20px 18px;
 }
 
 .button {
@@ -356,6 +354,16 @@ a {
     font-size: 16px;
     line-height: 19px;
     color: #F26376;
+}
+
+.btn:hover {
+    background-color: #F26376;
+    color: #FFFFFF;
+}
+
+.btn::after {
+    color: #FFFFFF;
+    background-color: #f26376a2;
 }
 
 .feature {
@@ -409,12 +417,13 @@ a {
 .frame__wrap {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 97px 0 126px;
 }
 
 .frame__left {
     width: 360px;
-    margin-bottom: 126px;
-    padding-top: 97px;
+    
 }
 
 .frame__circle {
@@ -433,7 +442,6 @@ a {
 
 .frame__right {
     width: 557px;
-    padding: 150px 0;
 }
 
 .frame__right p {
@@ -471,6 +479,10 @@ a {
     border: none;
 }
 
+.frame__input:hover {
+    background: #a1a1a1e5;
+}
+
 .frame__btn {
     background: #F16D7F;
     font-size: 14px;
@@ -485,6 +497,10 @@ a {
     height: 36px;
     padding: 7px 7px 6px 8px;
     border: none;
+}
+
+.frame__btn:hover {
+    background: #f16d7fd2
 }
 
 .footer {
@@ -505,6 +521,31 @@ a {
 
 .social__icons {
     padding: 24px 0;
+}
+
+.fab {
+    background-color: #FFFFFF;
+}
+
+.fa-facebook-f {
+    padding: 8px 10.5px;
+}
+
+.fa-instagram {
+    padding: 8px;
+}
+
+.fa-pinterest-p {
+    padding: 8px 10px;
+}
+
+.fa-twitter {
+    padding: 8px;
+}
+
+.fab:hover {
+    background-color: #F16D7F;
+    color: #FFFFFF;
 }
 
 .breadcrumb {
@@ -547,12 +588,6 @@ a {
     padding: 51px 0 64px 0;
 
 }
-
-.filter__sort__wrap:last-child {
-    display: block;
-    justify-content: center;
-}
-
 details summary {
     display: block;
     text-decoration: none;
@@ -572,10 +607,13 @@ details summary {
 }
 
 .filter[open]>summary {
-    font-weight: 400;
+    font-weight: 600;
     color: #EF5B70;
     outline: none;
     border: none;
+    padding-left: 16px;
+    padding-top: 13px;
+    fill: #EF5B70 ;
   }
 
 .filter__text {
@@ -628,9 +666,17 @@ summary h2 {
 
 .sort__wrap {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 324px; 
+    justify-content: flex-end;
+    
+}
+
+.sort__sup:last-child {
+    margin-right: 0;
+}
+
+.sort__sup {
+    margin-right: 30px;
+    
 }
 
 .sort__text {
@@ -641,27 +687,25 @@ summary h2 {
     padding-right: 10px;
 }
 
-.sort__img {
-    padding-right: 30px;
-}
-
-label {
-    display: block;
-}
-
 .sort__size[open] {
-    position: relative;
-}
-
-.sort__size__checkbox {
-    display: block;
-    justify-content:flex-start;
-}
-
-.sort__size__checkbox[open] {
+    z-index: 5;
     position: absolute;
     background: #FFFFFF;
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+
+.sort__size[open]>summary {
+    display: non;
+}
+
+.sort__size__checkbox {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 16px;
+    color: #6F6E6E;
+    padding: 7px 0 11px 9px;
+    width: 79px;
 }
 
 .products__wrap {
@@ -859,4 +903,224 @@ label {
 .product__wrap {
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width:770px)  {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    .header {
+        padding: 0 32px;  
+    }
+
+    .nav {
+        height: 100%;
+        overflow: scroll;
+    }
+
+    .intro__wrap {
+        background-size: contain;
+        background-position: -216px bottom;
+        padding-left: 50%;
+    }
+
+    .intro__text {
+        font-weight: 400;
+        font-size: 23px;
+        line-height: 28px;
+       
+    }
+
+    .bolt {
+        font-weight:900;
+        font-size: 52px;
+        line-height: 53px;  
+    }
+
+    .categories {
+        margin: 0 16px;
+        margin-bottom: 14%;
+    }
+
+    .fetured__p {
+        margin-bottom: calc(4% * 2);
+    }
+
+    .catalog__items__card:nth-child(odd) {
+        margin-right: 2%;
+    }
+    .button {
+        margin-top: calc(4% * 0.8);
+        margin-bottom: calc(8% * 0.8);
+    }
+    .feature__wrap {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .feature__items:first-child {
+        padding-top: 48px;
+        padding-bottom: 0;
+    }
+
+    .feature__items:nth-child(2) {
+        padding: 48px 0;
+    }
+
+    .feature__items:last-child {
+        padding-top: 0;
+        padding-bottom: 48px;
+    }
+
+    .frame__wrap {
+        flex-direction: column;
+        align-items: center;
+        padding: 64px 0 140px;
+    }
+    
+    .frame__left {
+        margin-bottom: 48px;
+    }
+    .footer__wrap {
+        padding: 0 32px;
+    }
+
+    .breadcrumb__wrap {
+        padding: 0 16px;
+    }
+
+    .filter__sort__wrap {
+        padding: 24px 16px 40px; 
+    }
+
+    .products__wrap {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .product__wrap {
+        justify-content: center;
+    }
+
+    .product__wrap article:last-child {
+        display: none
+    }
+    
+    .cart .side {
+        flex-flow: column;
+        padding: 0 16px;
+    }
+
+    .card:first-child {
+        margin-top: 59px;
+    }
+    .cart .side .side__left .under__btn {
+        margin: 62px 0 64px;
+        justify-content: space-evenly;  
+    }
+
+    .cart .side .side__right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .cart .side .side__right .ship {
+        margin-top: 0;
+        margin-bottom: 128px;
+    }
+    .cart .side .side__right .checkout {
+        margin-bottom: 113px;
+    }
+    .registration .side {
+        margin: 40px 16px;
+    }
+    .registration .side .side__left {
+        width: 50%; 
+    }
+    .registration .side .side__left .name {
+        margin-top: 0;
+    }
+    .registration .side .side__right {
+        margin-left: 2%;
+        width: 50%; 
+        size: calc(side__right / 1.8);
+    }
+    .registration .side .side__right h2 {
+        font-size: 16px;
+        line-height: 19px;
+    }
+}
+
+
+@media (max-width:1000px) {
+    .header {
+        padding: 0 32px;  
+    }
+
+    .products__wrap {
+        justify-content: center;
+    } 
+
+    .catalog__items__card:nth-child(odd) {
+        margin-right: 2%;
+    }
+
+    .intro__wrap {
+        background-size: contain;
+        background-position: -200px bottom;
+    }
+
+
+    .categories {
+        margin: 0 16px;
+        margin-bottom: 14%;
+    }
+
+    .feature__wrap {
+        padding-right: 16px;
+        padding-left: 16px;
+    }
+
+    .footer__wrap {
+        padding: 0 32px;
+    }
+
+    .breadcrumb__wrap {
+        padding: 0 16px;
+    }
+
+    .filter__sort__wrap {
+        padding: 24px 16px 40px; 
+    }
+
+    .product__wrap {
+        justify-content: center;
+    }
+
+    .product__wrap article:last-child {
+        display: none
+    }
+    .cart .side {
+        flex-flow: column;
+        padding: 0 16px;
+    }
+    .cart .side .side__right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .cart .side .side__left .under__btn {
+        margin: 62px 0 64px;
+        justify-content: space-evenly;  
+    }
+    .registration .side {
+        margin: 40px 16px;
+    }
+    .registration .side .side__left .name {
+        margin-top: 0;
+    }
 }
