--- a/Shop/sass/block/_card.scss
+++ b/Shop/sass/block/_card.scss
@@ -17,7 +17,6 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding-right: 5%;
             h2 {
                 font-weight: 400;
                 font-size: 24px;
@@ -41,6 +40,7 @@
             }
         }
         .card__btn {
+            margin-left: 152px;
             .close {
                 border: none;  
                 background: #FFFFFF;
@@ -54,3 +54,4 @@
 .card:first-child {
     margin-top: 96px;
 }
+
