--- a/Shop/sass/mainstyle.scss
+++ b/Shop/sass/mainstyle.scss
@@ -1,6 +1,7 @@
+@import "block/media";
 @import "block/card";
 @import "block/var";
-@import "block/media";
+
 * {
      margin: 0;
      padding: 0;
@@ -10,7 +11,7 @@
     .side {
         display: flex;
         justify-content: space-between;
-        
+        width: 100%;
         .side__left {
             .under__btn {
                 margin: 72px 0 128px;
@@ -25,12 +26,17 @@
                     line-height: 17px;
                     color: #000000;
                 }
-             }
+                button:hover {
+                    background: #F16D7F;
+                    border: none;
+                    color: #FFFFFF;
+                }
+            }
         }
         
         .side__right {
             .ship {
-                
+                width: 360px;
                 margin-top: 113px;
                 margin-bottom: 51px;            
                 display: flex;
@@ -51,6 +57,9 @@
                     border: 1px solid #A4A4A4;
                     background: #FFFFFF;
                 }
+                input:hover {
+                    border: 1px solid #000000;
+                }
                 button {
                     margin-top: 23px;
                     border: 1px solid #A4A4A4;
@@ -62,7 +71,12 @@
                     line-height: 13px;
                     color: #4A4A4A;
                     padding: 11px 0;
-                }       
+                }   
+                button:hover {
+                    background-color: #F16D7F;
+                    color:#FFFFFF;
+                    border: none;;
+                }    
             }
             .checkout {
                 
@@ -112,6 +126,10 @@
                     background: #F16D7F;
                     border: none;
                 }
+                button:hover {
+                    background: #f74d63; 
+                    
+                }
             }
         }
     }
@@ -121,12 +139,12 @@
     .side {
         display: flex;
         justify-content: space-between;
+        margin-top: 64px;
+        margin-bottom: 96px;
         .side__left {
-            width: 360px;
             display: flex;
             flex-direction: column;
             .name {
-                margin-top: 64px;
                 display: flex;
                 flex-direction: column;
                 h3 {
@@ -161,6 +179,9 @@
                     padding-left: 10px;
                     padding-right: 20px;
                 }
+                span:hover {
+                    font-size:medium;
+                }
             }
             .login {
                 margin-top: 33px;
@@ -191,8 +212,7 @@
                 }
             }
             button {
-                margin-top: 39px;
-                margin-bottom: 96px;
+                margin-top: 39px; 
                 background: #F16D7F;
                 border: none;
                 width: 167px;
@@ -204,16 +224,28 @@
                     color: #FFFFFF;   
                 }
             }
+            button:hover {
+                background: #f74d63;
+            }
+            input:hover {
+                border: 1px solid #000;
+            }
         }
         .side__right {
-            width: 652px;
+            margin-left: 11%;
             h2 {
-                margin-top: 64px;
                 @include loyalty;
+                
+                @media (max-width:770px) {
+                    @include loyalty__tablet  
+                }
             }
             p {
                 margin-top: 22px;
                 @include loyalty;
+                @media (max-width:770px) {
+                    @include loyalty__tablet  
+                }
             }
             ul {
                 margin-top: 21px;
@@ -221,7 +253,10 @@
                 padding-left: 28px;
                 li {
                     @include loyalty;
-                    margin-bottom: 16px;   
+                    margin-bottom: 16px;
+                    @media (max-width:770px) {
+                        @include loyalty__tablet  
+                    }   
                 }
             }
         }
