--- a/Shop/sass/block/_var.scss
+++ b/Shop/sass/block/_var.scss
@@ -1,4 +1,5 @@
 $maincolor: #F16D7F;
+$margin: 11%;
 
 @mixin loyalty {
     font-weight: 300;
@@ -13,4 +14,5 @@ $maincolor: #F16D7F;
     line-height: 19px;
     color: #000000;
 }
+
 
