--- a/Shop/sass/block/_card.scss
+++ b/Shop/sass/block/_card.scss
@@ -5,7 +5,9 @@
     width: 100%;
     height: 306px;
     filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
-
+    // .card__img {
+    //     height: 100%;
+    // }
     .card__side {
         width: 66%;
         background: #FFFFFF;
@@ -54,4 +56,3 @@
 .card:first-child {
     margin-top: 96px;
 }
-
